--- a/Guilherme_Vidya_Machine_Learning_Developer_Practical_Test_ipynb.ipynb
+++ b/Guilherme_Vidya_Machine_Learning_Developer_Practical_Test_ipynb.ipynb
@@ -401,7 +401,6 @@
         "model.add(Dropout(0.5))\n",
         "model.add(Dense(10, activation='softmax'))\n",
         "\n",
-        "# Compilar o modelo\n",
         "model.compile(optimizer='adam', loss='categorical_crossentropy',\n",
         "              metrics=['accuracy'])\n",
         "model.summary()"
@@ -594,7 +593,7 @@
         "    X_train, y_train,\n",
         "    epochs=10,\n",
         "    validation_data=(X_val, y_val),\n",
-        "    callbacks=[checkpoint_callback]  # Passar o callback aqui\n",
+        "    callbacks=[checkpoint_callback]\n",
         ")"
       ],
       "metadata": {
